[package]
name = "combo_gen"
version = "2.0.0"
edition = "2021"
authors = ["Your Name"]

[dependencies]
# Core dependencies
num_cpus = "1.16.0"
indicatif = "0.17.8"
flate2 = "1.0"

# GPU acceleration (optional - comment out for CPU-only build)
wgpu = { version = "0.19", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }

# Performance optimizations
rayon = "1.8"           # Parallel iterators
memmap2 = "0.9"         # Memory-mapped file I/O
crossbeam = "0.8"       # Better concurrent data structures

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[[bin]]
name = "combo_gen_hybrid"
path = "src/main.rs"

[features]
default = ["gpu"]
gpu = ["wgpu", "pollster", "bytemuck"]
cpu-only = []
